--- a/package.json
+++ b/package.json
@@ -10,25 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "axios": "^1.2.2",
-    "mysql2": "^2.3.3",
-    "net": "^1.0.2",
-    "process": "^0.11.10",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-tab-view": "^3.3.4",
-    "timers": "^0.1.1",
-    "tls": "^0.0.1",
-    "url": "^0.11.0"
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
