--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gifted-chat": "^1.1.0",
