--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^1.2.2",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-native": "0.70.6",
-    "react-native-gifted-chat": "^1.1.0",
+    "react-native-gifted-chat": "^1.1.1",
+    "react-native-paper": "^5.1.4",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.7.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
